fix: issue with titles not showing on dark mode enabled devices

--- a/css/general-styles.css
+++ b/css/general-styles.css
@@ -89,7 +89,7 @@ h1{
 	font-family: 'Poppins', sans-serif;
   font-size:90px;
   line-height:80px;
-	color:#333333;
+	/* color:#333333; */
 }
 /*medium intro text*/
 h2{
